Add feature register and get token but verify is not implemented in OtpService.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,27 @@ spring.task.execution.pool.core-size=20
 spring.task.execution.pool.max-size=100
 spring.task.scheduling.pool.size=50
 spring.task.scheduling.thread-name-prefix=scheduler
+
+#mail
+spring.mail.host=your-mail-host
+spring.mail.port=your-mail-port
+spring.mail.username=your-mail-username
+spring.mail.password=your-mail-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Debug logging
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot.autoconfigure.security=DEBUG
+logging.level.org.springframework.data.redis=DEBUG
+
+#redis
+spring.redis.host=your-redis-host
+spring.redis.port=your-redis-port
+spring.redis.client-type=LETTUCE
+spring.redis.timeout=60000
+spring.redis.connect-timeout=60000
+spring.cache.redis.time-to-live=900000
+
+#jwt
