Add: Feature login at AuthServiceImpl.java and create jwt configuration like CustomUserDetailService.java, JwtConfig.java, JwtUtils.java, and JwtAuthenticationFilter.java and not implemented yet.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,5 @@ spring.redis.connect-timeout=60000
 spring.cache.redis.time-to-live=900000
 
 #jwt
+jwt.secret=your-jwt-secret
+jwt.expiration=your-jwt-expiration
